--- a/Project/index.html
+++ b/Project/index.html
@@ -9,18 +9,47 @@
     <link rel="stylesheet" type="text/css" href="./public/ionicons-2.0.1/css/ionicons.css">
   </head>
   <body>
-    <div class = "headerCls">
-      <a href="#"><img class = "image" src="http://acarmekanik.com.tr/medya/2017/04/logo-beyaz.png" alt="ACAR Logo" height="50px"></a>
+    <header class = "headerCls">
+      <a href="#"><img class = "image" src="D:\Facultate\Facult\an2\sem2\TW\Proiect\ACAR\app\public\sigla_fullsize.png" alt="ACAR Logo" height="50px"></a>
+      <div class = "left-buttons">
+        <button href = "#" class = "home-button">Home</button>
+        <button hred = "#" class = "about-button">About</button>
+      </div>
       <div class="center-buttons">
-        <a href="#" class = "obj"><i class="ion ion-ios-arrow-down"></i>Facultate</a>
-        <a href="#" class = "obj">Materie</a>
-        <a href="#" class = "obj">Profesor</a>
+        <div class = "dropdown">
+        <button href="#" class = "center-buttons-obj"><i class="ion ion-ios-arrow-down"></i>Facultate</button>
+        <nav class = "dropdown-content">
+          <a href = "#">Informatica</a>
+          <a href = "#">Geografie</a>
+          <a href = "#">Matematica</a>
+        </nav>
+      </div>
+      <div class = "dropdown">
+        <button href="#" class = "center-buttons-obj"><i class="ion ion-ios-arrow-down"></i>Materie</button>
+        <nav class = "dropdown-content">
+          <a href = "#">Informatica</a>
+          <a href = "#">Geografie</a>
+          <a href = "#">Matematica</a>
+        </nav>
+      </div>
+      <div class = "dropdown">
+        <button href="#" class = "center-buttons-obj"><i class="ion ion-ios-arrow-down"></i>Profesor</button>
+        <nav class = "dropdown-content">
+          <a href = "#">Patrut</a>
+          <a href = "#">Ciobaca</a>
+          <a href = "#">Tiplea</a>
+        </nav>
+      </div>
       </div>
       <div class="right-buttons">
-        <a href="#" class = "survey-button">My Surveys</a>
+        <a href="#" class = "survey-button"><i class = "ion ion-chatbox-working"></i>My Surveys</a>
         <button href="#" class = "logIn-button">Log In</button>
       </div>
-    </div>
-    
+    </header>
+    <main class = "page-description">
+      <h1>AcaR</h1>
+      <h2>Academic Recommender</h2>
+      <p>This is a webpage designed for students that need help in scheduling their tasks correctly throughout college.</p>
+    </main>
   </body>
 </html>
