Pagina add_survey, modificare pagina login,register,about, redenumire css-uri

--- a/Project/register.html
+++ b/Project/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Register</title>
-    <link rel="stylesheet" type="text/css" href="./stylesRegister.css">
+    <link rel="stylesheet" type="text/css" href="./registerStyle.css">
 </head>
 <body>
     <img src="public\sigla_fullsize.png" class="sigla" alt="Sigla">
