--- a/Project/surveyPage.html
+++ b/Project/surveyPage.html
@@ -8,7 +8,7 @@
     <title>MySurveys</title>
     <link rel="stylesheet" type="text/css" href="surveyPageStyle.css">
     <link rel="stylesheet" type="text/css" href="./public/ionicons-2.0.1/css/ionicons.css">
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./indexStyle.css">
     <link rel="stylesheet" type="text/css" href="./public/ionicons-2.0.1/css/ionicons.css">
 </head>
 
