--- a/Project/index.html
+++ b/Project/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <title>ACAR - Academic Recommender</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="./styles.css">
+  <link rel="stylesheet" type="text/css" href="./indexStyle.css">
   <link rel="stylesheet" type="text/css" href="./public/ionicons-2.0.1/css/ionicons.css">
 </head>
 
