--- a/Project/profile.html
+++ b/Project/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./stylesprofile.css">
+    <link rel="stylesheet" type="text/css" href="./profileStyle.css">
     <link rel="stylesheet" type="text/css" href="./public/ionicons-2.0.1/css/ionicons.css">
     <title>My Profile</title>
 </head>
