adaugare responsiveness pentru formularul de survey

--- a/Project/surveyForm.html
+++ b/Project/surveyForm.html
@@ -104,7 +104,7 @@
         <input type="text" maxlength="25">
         <br/>
         <p class="review">Introduceti review-ul</p>
-        <input type="text" id="review" maxlength="256">
+        <textarea  id="subject" name="subject" placeholder="Scrie ceva.." style="height:200px"></textarea>
         <br/>
         <button class="submit">Submit</button>
     </form>
