mvc format project, added register

--- a/ACAR/public/login.html
+++ b/ACAR/public/login.html
@@ -22,7 +22,7 @@
     </form>
   
     <div class="login-help">
-      <a href="#" onclick="window.location.href='./register.php'"><b>Register</b></a><br> 
+      <a href="#" onclick="window.location.href='./register.html'"><b>Register</b></a><br> 
        <a href="#"><b>Forgot Password</b></a>
     </div>
   </div>
