Adaugare in ScholaryHtml :-Ghid de utilizare al aplicatiei                                             -Raportul aplicatiei

--- a/ScholaryHTML/Raport aplicatie.html
+++ b/ScholaryHTML/Raport aplicatie.html
@@ -7,6 +7,7 @@
     <title>ACAR</title>
 </head>
 <body>
+    <h2>Raportul aplicatiei ACAR</h2>
     <span resources="https://github.com/Crivoi/AcaR">Academic Recomander for Students</span><br>
     <span resources="https://github.com/rafael932">Martonca Iosif Rafael</span><br>
     <span resources="https://github.com/Crivoi">Crivoi Andrei</span><br>
@@ -40,16 +41,6 @@
         in implementarea anumitor taskuri.
      </p>
 
-    <h3>Instructiuni de utilizare pentru site local</h3>
-    <p>Pentru a porni siteul este nevoie de un utilitar care sa contina
-       Apache HTTP Server si MySQL database cel folosit in crearea proiectului
-       fiind <span resources="https://www.apachefriends.org/ro/index.html">XAMPP</span>. 
-       Toate fisierele siteului existente pe github vor fi puse in
-       folderu htdocs existent in calculator dupa instalarea software-ului apoi
-       se va porni XAMPP, mai exact Apache si MySQL. Pentru a accesa siteul se va 
-       deschide in orice browser pagina de login sau register sub localhost.
-    </p>
-
     <h3>Functionalitatile siteului</h3>
     <p> In cadrul aplicatiei Academic Recomander studentii au o pagina de login si de register
         unde pot accesa respectiv creea un cont in caz de nu au unul. Dupa logare, studentii pot 
@@ -59,16 +50,23 @@
         numarul de surveyuri existente pe site si pentru ca la randul lor sa ajute si ei alti studenti.
     </p>
 
-    <h3>Modul de accesare a sitelui</h3>
-    <p> Studentii vor avea neaparata nevoie de un cont pentru a aceesa aplicatia.
-        Accesul fara un cont nu este posibila in site.
+    <h3>Stadiul actual al proiectului</h3>
+    <p> Functionalitatile de baza actuale ale proiectului sunt o interfata grafica usor de utilizat,
+        utilizarea modalelor pentru afisarea surveyurilor, meniul de inregistrare a unui cont dar si
+        meniul pentru logarea efectiva in aplicatie dar si posibilitatea de a adauga surveyuri in pagina.
     </p>
 
-    <h3>Modul de eliminare a persoanelor rau intentionate de pe site</h3>
-    <p>Orice persoana va putea fi raportata prin intermediul emailului catre administratorul
-        platformei. Daca exista dovezi concludente ca o anumita persoana a adaugat informatii gresite
-        sau alte forme de manifestari ce incalca o conduita adecvata unui site academic va fi eliminat
-        din baza de date fara posibilitatea creerii altui cont cu aceeasi adresa de email.
+    <h3>Lucruri ce ar mai putea fi facute la proiect</h3>
+    <p>Lucrurile ce ar mai putea fi implementate pe viitor sunt posibilitatea de a vizualiza pagina de profil 
+        a unui utilizator, posibilitatea de a raporta un utilizator dar si un survey direct din aplicatie si nu
+        prin email catre administrator, introducerea unei adrese de email cu posibilitatea de recuperare a contului,
+        acest lucru fiind posibil doar din pagina de profil, introducerea unui footer cu o bara de contact in josul paginii,
+        eliminarea automata a unor surveyuri sau a unor utilizatori in functie de numarul de rapoarte.
+    </p>
+
+    <h3>Baza de date</h3>
+    <p>Baza de date este creata in <span resources="https://ro.wikipedia.org/wiki/MySQL">mySQL</span> cu ajutorul 
+        <span resources="https://ro.wikipedia.org/wiki/MySQL">PHPmyAdmin</span>. 
     </p>
 </body>
 
